--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-beautifulsoup4==4.11.1
+beautifulsoup4==4.11.2
+instagrapi==1.16.41
 Pillow==9.4.0
 python_telegram_bot==20.0
 pytz==2022.2.1
-requests==2.28.1
+requests==2.28.2
+schedule==1.1.0
 telegram==0.0.1
-toml==0.10.2
-typing_extensions==4.4.0
+typing_extensions==4.5.0
