--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
     "santodelgiorno",
     "telegrambot",
     "textbbox"
-  ]
+  ],
+  "python.linting.flake8Enabled": false,
+  "python.linting.pydocstyleEnabled": true,
+  "python.linting.enabled": true
 }
