--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-beautifulsoup4==4.11.2
-instagrapi==1.16.41
-Pillow==9.4.0
-python_telegram_bot==20.0
+beautifulsoup4==4.12.2
+instagrapi==1.17.6
+Pillow==9.5.0
 pytz==2022.2.1
 requests==2.28.2
-schedule==1.1.0
-telegram==0.0.1
+schedule==1.2.0
+python-telegram-bot[job-queue]==20.2
 typing_extensions==4.5.0
+openai==0.27.5
