--- a/settings.toml.example
+++ b/settings.toml.example
@@ -3,13 +3,14 @@ token = ""
 admin_chat_id = 0
 channel_url = ""
 channel_name = ""
-post_time = "08:00"
+post_time = ""
 
 [SaintFactory]
 openai_key = ""
-openai_folder = "out/openai/"
-image_folder = "out/images/"
-toml_folder = "out/toml/"
+openai_folder = ""
+image_folder = ""
+toml_folder = ""
+fonts_folder = ""
 
 [SaintCreator]
 generate_time = ""
@@ -17,7 +18,12 @@ generate_time = ""
 [Instagram]
 username = ""
 password = ""
-temp_folder = ""
+proxy_host = ""
+proxy_port = ""
+proxy_username = ""
+proxy_password = ""
+temp_folder = "out/temp/"
+instagram_settings_path = ""
 
 [InstagramPoster]
 post_time = ""
