added a few words to dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,23 @@
 {
   "cSpell.words": [
+    "Alessina",
+    "Aminto",
     "citta",
+    "Dall",
     "deathplace",
+    "Eaco",
+    "Evangelisto",
     "fago",
+    "Finzio",
     "getbbox",
+    "Gisello",
     "instagrapi",
     "multicolumna",
+    "Nicomedo",
     "openai",
+    "postnow",
     "pytz",
+    "Quokkas",
     "resp",
     "santinoquotidiano",
     "santodelgiorno",
